# pypathdub

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  package.yml  publish.yml
scripts/: check_version_tag.py  normalize_path_string.py
scripts/git-hooks/: pre-push
src/pypathdub/: __init__.py  cli.py  core.py
tests/: test_normalize_path_string.py
